fixed horizontal scrollbar issue that was caused by the blog row

--- a/ejs-website/public/stylesheets/style.css
+++ b/ejs-website/public/stylesheets/style.css
@@ -6,6 +6,11 @@ form-text {
     font-size: 10px;
 }
 
+.blog-row {
+    width: 100%;
+    margin-left:0;
+}
+
 #landing {
     position: relative;
     height: auto;
